--- a/package.json
+++ b/package.json
@@ -9,27 +9,52 @@
     "start": "next start"
   },
   "dependencies": {
-    "babel-plugin-inline-react-svg": "2.0.1",
-    "babel-plugin-styled-components": "1.12.0",
-    "next": "10.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.2.3",
-    "styled-reset": "4.3.4"
+    "@reduxjs/toolkit": "^1.4.0",
+    "@types/formidable": "^1.0.31",
+    "@types/googlemaps": "^3.39.13",
+    "@types/lodash": "^4.14.159",
+    "@types/react-datepicker": "^3.1.1",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/uuid": "^8.3.0",
+    "aws-sdk": "^2.765.0",
+    "axios": "^0.19.2",
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-styled-components": "^1.10.7",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.15.0",
+    "formidable": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
+    "next": "^9.4.4",
+    "next-redux-wrapper": "^6.0.2",
+    "react": "^16.13.1",
+    "react-autosize-textarea": "^7.1.0",
+    "react-datepicker": "^3.1.3",
+    "react-dom": "^16.13.1",
+    "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^7.2.0",
+    "react-textarea-autosize": "^8.2.0",
+    "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
+    "styled-reset": "^4.1.6",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "@types/node": "14.14.37",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
-    "@types/styled-components": "5.1.9",
-    "@typescript-eslint/eslint-plugin": "4.20.0",
-    "@typescript-eslint/parser": "4.20.0",
-    "eslint": "7.23.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "typescript": "4.2.3"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "@types/react-outside-click-handler": "^1.3.0",
+    "@types/styled-components": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "typescript": "^4.0.2"
   }
 }
